0x02-functions_nested_loops/5-sign.c:
ign.c:14:13: error: expected ‘)’ before ‘{’ token
   14 |  if ((n > 0)
      |     ~       ^
      |             )
   15 |  {
      |  ~           
5-sign.c:30:1: error: expected expression before ‘}’ token
   30 | }
      | ^
5-sign.c:30:1: error: control reaches end of non-void function [-Werror=return-type]
   30 | }
      | ^
cc1: all warnings being treated as errors
